feat: grid API
